--- a/AipoReminder/app.config
+++ b/AipoReminder/app.config
@@ -5,9 +5,9 @@
   <!-- ===================================================================== -->
   <!-- log4netセクションのハンドラ設定 -->
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="AipoReminder.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="AipoReminder.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
   <!-- ===================================================================== -->
@@ -15,14 +15,14 @@
   <!-- ===================================================================== -->
   <system.data>
     <DbProviderFactories>
-      <clear />
-      <add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Framework Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql, Version=2.0.4.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7" />
+      <clear/>
+      <add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Framework Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql, Version=2.0.5.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7"/>
     </DbProviderFactories>
   </system.data>
   <appSettings>
     <!-- log4net内部のデバッグメッセージを出力する場合､trueに設定 -->
-    <add key="log4net.Internal.Debug" value="false" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="log4net.Internal.Debug" value="false"/>
+    <add key="ClientSettingsProvider.ServiceUri" value=""/>
   </appSettings>
   <log4net>
     <!-- ===================================================================== -->
@@ -31,38 +31,38 @@
     <!-- ▼ファイル出力用[RollingLogFileAppender] -->
     <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n" />
+        <param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n"/>
       </layout>
     </appender>
     <!-- ▼ファイル出力用[RollingLogFileAppender] -->
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
       <!-- ファイル名 -->
-      <param name="File" value="MyApp" />
+      <param name="File" value="MyApp"/>
       <!-- 追記する場合true/上書きする場合false -->
-      <param name="AppendToFile" value="true" />
+      <param name="AppendToFile" value="true"/>
       <!-- ログ切り替えファイル数 -->
       <!-- 切り替えたログファイルを何世代保有するかを指定 -->
       <!-- RollingStyle で「size」または「Composite」を指定した場合、必ず指定 -->
-      <param name="MaxSizeRollBackups" value="10" />
+      <param name="MaxSizeRollBackups" value="10"/>
       <!-- ログファイルの最大サイズ -->
       <!-- KB：キロバイト -->
       <!-- MB：メガバイト -->
-      <param name="MaximumFileSize" value="100KB" />
+      <param name="MaximumFileSize" value="100KB"/>
       <!-- ログ切り替え方式 -->
       <!-- date：日付 -->
       <!-- size：サイズ -->
       <!-- Composite：日付+サイズ -->
-      <param name="RollingStyle" value="date " />
+      <param name="RollingStyle" value="date "/>
       <!-- 常に同じファイルにログを記録するかどうかを指定 -->
       <!-- 常に同じファイルにログを記録する場合はtrue/そうでない場合はfalseに設定 -->
-      <param name="StaticLogFileName" value="false" />
+      <param name="StaticLogFileName" value="false"/>
       <!-- ログファイルのローリングのスケジュールを指定 -->
-      <param name="DatePattern" value="&quot;.&quot;yyyy-MM-dd&quot;.log&quot;" />
+      <param name="DatePattern" value="&quot;.&quot;yyyy-MM-dd&quot;.log&quot;"/>
       <!-- ログフォーマット -->
       <layout type="log4net.Layout.PatternLayout">
-        <param name="Header" value="[Header]\r\n" />
-        <param name="Footer" value="[Footer]\r\n" />
-        <param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n" />
+        <param name="Header" value="[Header]\r\n"/>
+        <param name="Footer" value="[Footer]\r\n"/>
+        <param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n"/>
       </layout>
     </appender>
     <!-- ===================================================================== -->
@@ -73,19 +73,19 @@
     <!-- ※デフォルトとなるログ出力設定 -->
     <!-- ===================================================================== -->
     <root>
-      <level value="WARN" />
+      <level value="WARN"/>
       <!-- ファイル出力 -->
-      <appender-ref ref="ConsoleAppender" />
-      <appender-ref ref="RollingLogFileAppender" />
+      <appender-ref ref="ConsoleAppender"/>
+      <appender-ref ref="RollingLogFileAppender"/>
     </root>
   </log4net>
   <userSettings>
     <AipoReminder.Properties.Settings>
       <setting name="userId" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="userPassword" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="checkTime" serializeAs="String">
         <value>10</value>
@@ -94,7 +94,7 @@
         <value>http://192.168.24.52:81/aipo/</value>
       </setting>
       <setting name="loginName" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="checkAutoRun" serializeAs="String">
         <value>False</value>
@@ -103,7 +103,7 @@
         <value>False</value>
       </setting>
       <setting name="NpgsqlConnectionServer" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="NpgsqlConnectionPort" serializeAs="String">
         <value>5432</value>
@@ -112,7 +112,7 @@
         <value>aipo_reminder</value>
       </setting>
       <setting name="NpgsqlConnectionPassword" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="NpgsqlConnectionDatabase" serializeAs="String">
         <value>org001</value>
@@ -140,7 +140,11 @@
   <!-- ライブラリ設定 -->
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <probing privatePath="lib" />
-    </assemblyBinding>
+      <probing privatePath="lib"/>
+    	<dependentAssembly>
+				<assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-2.0.5.0" newVersion="2.0.5.0"/>
+			</dependentAssembly>
+		</assemblyBinding>
   </runtime>
 </configuration>
