ログファイル名を変更

--- a/AipoReminder/app.config
+++ b/AipoReminder/app.config
@@ -37,7 +37,7 @@
     <!-- ▼ファイル出力用[RollingLogFileAppender] -->
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
       <!-- ファイル名 -->
-      <param name="File" value="MyApp"/>
+      <param name="File" value="AipoReminder"/>
       <!-- 追記する場合true/上書きする場合false -->
       <param name="AppendToFile" value="true"/>
       <!-- ログ切り替えファイル数 -->
