--- a/AipoReminder/Properties/Settings.settings
+++ b/AipoReminder/Properties/Settings.settings
@@ -56,5 +56,8 @@
     <Setting Name="checkMemo" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="aipoVersion" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">5</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
