Npgsqlのタイムアウト設定を可能にした。 起動時のログイン処理を1分間に7回実行し、ログイン出来なかったときにメッセージボックスを表示するように変更。

--- a/AipoReminder/Properties/Settings.settings
+++ b/AipoReminder/Properties/Settings.settings
@@ -38,6 +38,9 @@
     <Setting Name="NpgsqlConnectionDatabase" Type="System.String" Scope="User">
       <Value Profile="(Default)">org001</Value>
     </Setting>
+    <Setting Name="NpgsqlConnectionTimeout" Type="System.String" Scope="User">
+      <Value Profile="(Default)">15</Value>
+    </Setting>
     <Setting Name="checkBlog" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
