--- a/AipoReminder/Properties/Settings.settings
+++ b/AipoReminder/Properties/Settings.settings
@@ -62,5 +62,11 @@
     <Setting Name="aipoVersion" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">5</Value>
     </Setting>
+    <Setting Name="checkOtherSchedule" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="checkGroupUserId" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
