--- a/AipoReminder/app.config
+++ b/AipoReminder/app.config
@@ -82,10 +82,10 @@
   <userSettings>
     <AipoReminder.Properties.Settings>
       <setting name="userId" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="userPassword" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="checkTime" serializeAs="String">
         <value>10</value>
@@ -94,7 +94,7 @@
         <value>http://192.168.24.52:81/aipo/</value>
       </setting>
       <setting name="loginName" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="checkAutoRun" serializeAs="String">
         <value>False</value>
@@ -103,7 +103,7 @@
         <value>False</value>
       </setting>
       <setting name="NpgsqlConnectionServer" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="NpgsqlConnectionPort" serializeAs="String">
         <value>5432</value>
@@ -112,10 +112,13 @@
         <value>aipo_reminder</value>
       </setting>
       <setting name="NpgsqlConnectionPassword" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="NpgsqlConnectionDatabase" serializeAs="String">
         <value>org001</value>
+      </setting>
+      <setting name="NpgsqlConnectionTimeout" serializeAs="String">
+        <value>15</value>
       </setting>
       <setting name="checkBlog" serializeAs="String">
         <value>False</value>
@@ -137,6 +140,12 @@
       </setting>
       <setting name="aipoVersion" serializeAs="String">
         <value>5</value>
+      </setting>
+      <setting name="checkOtherSchedule" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="checkGroupUserId" serializeAs="String">
+        <value />
       </setting>
     </AipoReminder.Properties.Settings>
   </userSettings>
