--- a/AipoReminder/app.config
+++ b/AipoReminder/app.config
@@ -147,6 +147,9 @@
       <setting name="checkGroupUserId" serializeAs="String">
         <value />
       </setting>
+      <setting name="checkInformation" serializeAs="String">
+        <value>False</value>
+      </setting>
     </AipoReminder.Properties.Settings>
   </userSettings>
   <!-- ライブラリ設定 -->
