--- a/AipoReminder/AipoReminder.csproj
+++ b/AipoReminder/AipoReminder.csproj
@@ -70,6 +70,7 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AlertWindow, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL" />
     <Reference Include="Mono.Security, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL" />
     <Reference Include="Npgsql, Version=2.0.7.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL" />
@@ -246,6 +247,7 @@
     <None Include="favicon-16-red.ico" />
     <None Include="favicon-16.ico" />
     <Content Include="favicon.ico" />
+    <Content Include="lib\AlertWindow.dll" />
     <Content Include="lib\ja\Npgsql.resources.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
