--- a/AlertWindow/AlertWindow.csproj
+++ b/AlertWindow/AlertWindow.csproj
@@ -6,10 +6,10 @@
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{C8D9CCEC-8C5E-4AD9-B789-23B01F9EDCA4}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Allison.AlertWindow</RootNamespace>
-    <AssemblyName>Allison.AlertWindow</AssemblyName>
+    <AssemblyName>AlertWindow</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <StartupObject>
