--- a/WinFramework/app.config
+++ b/WinFramework/app.config
@@ -1,13 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0"?>
 <configuration>
   <!-- ===================================================================== -->
   <!-- 構成ファイルの設定 -->
   <!-- ===================================================================== -->
   <!-- log4netセクションのハンドラ設定 -->
   <configSections>
-    <section name="log4net" type="System.Configuration.IgnoreSectionHandler" />
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="WinFramework.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    <section name="log4net" type="System.Configuration.IgnoreSectionHandler"/>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="WinFramework.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
 
@@ -16,10 +16,7 @@
   <!-- ===================================================================== -->
   <system.data>
     <DbProviderFactories>
-      <add name="Npgsql Data Provider"
-           invariant="Npgsql"
-           description=".Net Framework Data Provider for PostgreSQL"
-           type="Npgsql.NpgsqlFactory, Npgsql, Version=2.0.7.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7" />
+      <add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Framework Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql, Version=2.0.8.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7"/>
     </DbProviderFactories>
   </system.data>
 
@@ -27,10 +24,10 @@
   <!-- DB接続設定 -->
   <!-- ===================================================================== -->
   <connectionStrings>
-    <add name="Sqlite" providerName="Mono.Data.Sqlite" connectionString="Data Source=/home/sta/data/TestData.db" />
-    <add name="PostgreSql" providerName="Npgsql" connectionString="Server=localhost;Port=5432;User Id=aipo_postgres;Password=aipo;Database=org001;" />
-    <add name="MySql" providerName="MySql.Data" connectionString="Server=192.168.1.2;Database=TestData;Uid=sta;Pwd=password;CharSet=utf8" />
-    <add name="SqlServer" providerName="System.Data.SqlClient" connectionString="Data Source=192.168.1.2,1031;Initial Catalog=TestData;User ID=sta;Password=passW0rd;Trusted_Connection=False" />
+    <add name="Sqlite" providerName="Mono.Data.Sqlite" connectionString="Data Source=/home/sta/data/TestData.db"/>
+    <add name="PostgreSql" providerName="Npgsql" connectionString="Server=localhost;Port=5432;User Id=aipo_postgres;Password=aipo;Database=org001;"/>
+    <add name="MySql" providerName="MySql.Data" connectionString="Server=192.168.1.2;Database=TestData;Uid=sta;Pwd=password;CharSet=utf8"/>
+    <add name="SqlServer" providerName="System.Data.SqlClient" connectionString="Data Source=192.168.1.2,1031;Initial Catalog=TestData;User ID=sta;Password=passW0rd;Trusted_Connection=False"/>
   </connectionStrings>
 
   <appSettings>
@@ -45,32 +42,32 @@
     <!-- ▼ファイル出力用[RollingLogFileAppender] -->
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
       <!-- ファイル名 -->
-      <param name="File" value="MyApp" />
+      <param name="File" value="MyApp"/>
       <!-- 追記する場合true/上書きする場合false -->
-      <param name="AppendToFile" value="true" />
+      <param name="AppendToFile" value="true"/>
       <!-- ログ切り替えファイル数 -->
       <!-- 切り替えたログファイルを何世代保有するかを指定 -->
       <!-- RollingStyle で「size」または「Composite」を指定した場合、必ず指定 -->
-      <param name="MaxSizeRollBackups" value="10" />
+      <param name="MaxSizeRollBackups" value="10"/>
       <!-- ログファイルの最大サイズ -->
       <!-- KB：キロバイト -->
       <!-- MB：メガバイト -->
-      <param name="MaximumFileSize" value="100KB" />
+      <param name="MaximumFileSize" value="100KB"/>
       <!-- ログ切り替え方式 -->
       <!-- date：日付 -->
       <!-- size：サイズ -->
       <!-- Composite：日付+サイズ -->
-      <param name="RollingStyle" value="date " />
+      <param name="RollingStyle" value="date"/>
       <!-- 常に同じファイルにログを記録するかどうかを指定 -->
       <!-- 常に同じファイルにログを記録する場合はtrue/そうでない場合はfalseに設定 -->
-      <param name="StaticLogFileName" value="false" />
+      <param name="StaticLogFileName" value="false"/>
       <!-- ログファイルのローリングのスケジュールを指定 -->
-      <param name="DatePattern" value='"."yyyy-MM-dd".log"' />
+      <param name="DatePattern" value="&quot;.&quot;yyyy-MM-dd&quot;.log&quot;"/>
       <!-- ログフォーマット -->
       <layout type="log4net.Layout.PatternLayout">
-        <param name="Header" value="[Header]\r\n" />
-        <param name="Footer" value="[Footer]\r\n" />
-        <param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n" />
+        <param name="Header" value="[Header]\r\n"/>
+        <param name="Footer" value="[Footer]\r\n"/>
+        <param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n"/>
       </layout>
     </appender>
 
@@ -82,15 +79,15 @@
     <!-- ※デフォルトとなるログ出力設定 -->
     <!-- ===================================================================== -->
     <root>
-      <level value="INFO" />
+      <level value="INFO"/>
       <!-- ファイル出力 -->
-      <appender-ref ref="RollingLogFileAppender" />
+      <appender-ref ref="RollingLogFileAppender"/>
     </root>
   </log4net>
   <userSettings>
     <WinFramework.Properties.Settings>
       <setting name="NpgsqlConnectionServer" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="NpgsqlConnectionPort" serializeAs="String">
         <value>5432</value>
@@ -99,11 +96,24 @@
         <value>aipo_postgres</value>
       </setting>
       <setting name="NpgsqlConnectionPassword" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="NpgsqlConnectionDatabase" serializeAs="String">
         <value>org001</value>
       </setting>
     </WinFramework.Properties.Settings>
   </userSettings>
+  <!-- ライブラリ設定 -->
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <probing privatePath="lib"/>
+      <dependentAssembly>
+        <assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-2.0.8.0" newVersion="2.0.8.0"/>
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+  <startup>
+    <supportedRuntime version="v2.0.50727"/>
+  </startup>
 </configuration>
