--- a/AipoReminder/app.config
+++ b/AipoReminder/app.config
@@ -52,7 +52,7 @@
       <!-- date：日付 -->
       <!-- size：サイズ -->
       <!-- Composite：日付+サイズ -->
-      <param name="RollingStyle" value="date "/>
+      <param name="RollingStyle" value="date"/>
       <!-- 常に同じファイルにログを記録するかどうかを指定 -->
       <!-- 常に同じファイルにログを記録する場合はtrue/そうでない場合はfalseに設定 -->
       <param name="StaticLogFileName" value="false"/>
@@ -82,10 +82,10 @@
   <userSettings>
     <AipoReminder.Properties.Settings>
       <setting name="userId" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="userPassword" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="checkTime" serializeAs="String">
         <value>10</value>
@@ -94,7 +94,7 @@
         <value>http://192.168.24.52:81/aipo/</value>
       </setting>
       <setting name="loginName" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="checkAutoRun" serializeAs="String">
         <value>False</value>
@@ -103,7 +103,7 @@
         <value>False</value>
       </setting>
       <setting name="NpgsqlConnectionServer" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="NpgsqlConnectionPort" serializeAs="String">
         <value>5432</value>
@@ -112,7 +112,7 @@
         <value>aipo_reminder</value>
       </setting>
       <setting name="NpgsqlConnectionPassword" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="NpgsqlConnectionDatabase" serializeAs="String">
         <value>org001</value>
@@ -145,7 +145,7 @@
         <value>False</value>
       </setting>
       <setting name="checkGroupUserId" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="checkInformation" serializeAs="String">
         <value>False</value>
@@ -162,4 +162,7 @@
         </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <startup>
+    <supportedRuntime version="v2.0.50727"/>
+  </startup>
 </configuration>
