--- a/AipoReminder/Properties/Settings.settings
+++ b/AipoReminder/Properties/Settings.settings
@@ -71,5 +71,8 @@
     <Setting Name="checkInformation" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="ckeckExtTimeCard" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
