・ブラウザを指定出来るようにした ・ブラウザで表示した後ファイルを削除する際に一時停止するのではなく、ブラウザが入力待ちになるまで待つようにした ・npgsqlのバージョンを2.0.10.0にアップデート

--- a/AipoReminder/app.config
+++ b/AipoReminder/app.config
@@ -153,6 +153,9 @@
       <setting name="ckeckExtTimeCard" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="browserName" serializeAs="String">
+        <value>default</value>
+      </setting>
     </AipoReminder.Properties.Settings>
   </userSettings>
   <!-- ライブラリ設定 -->
@@ -161,7 +164,7 @@
       <probing privatePath="lib"/>
         <dependentAssembly>
             <assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral"/>
-            <bindingRedirect oldVersion="0.0.0.0-2.0.8.0" newVersion="2.0.8.0"/>
+            <bindingRedirect oldVersion="0.0.0.0-2.0.10.0" newVersion="2.0.10.0"/>
         </dependentAssembly>
     </assemblyBinding>
   </runtime>
