--- a/AipoReminder/AipoReminder.csproj
+++ b/AipoReminder/AipoReminder.csproj
@@ -73,7 +73,7 @@
     <Reference Include="AlertWindow, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86" />
     <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL" />
     <Reference Include="Mono.Security, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL" />
-    <Reference Include="Npgsql, Version=2.0.8.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL" />
+    <Reference Include="Npgsql, Version=2.0.10.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
@@ -217,6 +217,7 @@
     </Compile>
     <Compile Include="Utility\DBUtility.cs" />
     <Compile Include="Manager\SettingManager.cs" />
+    <Compile Include="Utility\RegistryUtility.cs" />
     <Compile Include="ValueObject\BalloonItem.cs" />
     <Compile Include="ValueObject\BalloonItemBlog.cs" />
     <Compile Include="ValueObject\BalloonItemBlogComment.cs" />
@@ -224,6 +225,7 @@
     <Compile Include="ValueObject\BalloonItemMsgboard.cs" />
     <Compile Include="ValueObject\BalloonItemSchedule.cs" />
     <Compile Include="ValueObject\BalloonItemWorkflow.cs" />
+    <Compile Include="ValueObject\ComboBoxBrowserItem.cs" />
     <Compile Include="ValueObject\ComboBoxGroupItem.cs" />
     <Compile Include="ValueObject\ComboBoxItem.cs" />
     <Compile Include="ValueObject\ComboItemCheckTime.cs" />
