--- a/AipoReminder/Properties/Settings.settings
+++ b/AipoReminder/Properties/Settings.settings
@@ -74,5 +74,8 @@
     <Setting Name="ckeckExtTimeCard" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="browserName" Type="System.String" Scope="User">
+      <Value Profile="(Default)">default</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
