--- a/AipoReminder/app.config
+++ b/AipoReminder/app.config
@@ -156,6 +156,9 @@
       <setting name="browserName" serializeAs="String">
         <value>default</value>
       </setting>
+      <setting name="v6FirstTime" serializeAs="String">
+        <value>True</value>
+      </setting>
     </AipoReminder.Properties.Settings>
   </userSettings>
   <!-- ライブラリ設定 -->
